Criada  a autenticação temporária via Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.security.oauth2.client.registration.google.client-id=733015619265-cda93ldqr16cqmo7ht58pivbt2ldnktr.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=NIbqbwc043Uu29ILgwOJB6YX
